Fix typeahead suggestions box css

--- a/run/resources/public/assets/css/re-com.css
+++ b/run/resources/public/assets/css/re-com.css
@@ -1330,6 +1330,8 @@ code {
 
 .rc-typeahead-suggestions-container {
     background-color: #eee;
+    position: absolute;
+    z-index: 1000;
 }
 
 .rc-typeahead-suggestion {
